# pytest-textual-snapshot

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest_textual_snapshot.py  setup.py
resources/: snapshot_report_template.jinja2
