[tool.poetry]
name = "pytest-textual-snapshot"
version = "0.4.0"
description = "Snapshot testing for Textual apps"
authors = ["Darren Burns <darren@textualize.io>"]
maintainers = ["Darren Burns <darren@textualize.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/darrenburns/pytest-textual-snapshot"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
include = ["resources/**/*"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = ">=7.0.0"
rich = ">=12.0.0"
textual = ">=0.28.0"
syrupy = ">=3.0.0"
jinja2 = ">=3.0.0"

[tool.poetry.plugins."pytest11"]
"textual-snapshot" = "pytest_textual_snapshot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
